--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 *~
 \#*\#
 
+# Result files
+dcana.root
+dcana.out
+
 # Files from Brad's tarball that we don't want to include in repo
 DB/
 ROOTfiles/
